# LastautAI

./: .env.example  .gitignore  Claude.md  Design.md  Note for me and adrianos  README.md  Testing.md  db.sqlite3  pyproject.toml  railway.json  show-waitlist.py
LastautAI-screen-capture/: .gitignore  Desktop-Vision.md  README.md  Testing.md  manage.py
LastautAI-screen-capture/accounts/: models.py  views.py
LastautAI-screen-capture/agents/: models.py  urls.py
LastautAI-screen-capture/aut_app/: settings.py  urls.py  wsgi.py
LastautAI-screen-capture/capture/: models.py  recorder.py
LastautAI-screen-capture/templates/: base.html
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
agents/: agent.py  models.py  urls.py  views.py
agents/migrations/: 0002_workflow.py
aut_app/: asgi.py  settings.py  urls.py  wsgi.py
capture/: analyzer.py  recorder.py  urls.py  views.py
capture/migrations/: 0001_initial.py
docs/: backlog.md  prompts.md  spec.md  vision.md
examples/inputs/: conditional_alert.txt  multi_step_pipeline.txt  parameterized_etl.txt  simple_report.txt  webhook_trigger.txt
examples/outputs/: conditional_alert.json  multi_step_pipeline.json  parameterized_etl.json  simple_report.json  webhook_trigger.json
pipeline/: __init__.py  analyzer.py  parser.py  planner.py  serializer.py
pipeline/catalog/: registry.py
pipeline/executor/: actions.py  engine.py
pipeline/graph/: dag.py  topological.py
schemas/: action.schema.json  api_error.schema.json
src/: cli.py  scheduler.py
templates/: base.html
ui/: index.html
(+66 files in other folders)
